# eclipse-detector

./: Cargo.toml  LICENSE  README.md
src/: average.rs  main.rs
